Imagem base shibboleth

--- a/src/apache2/shib_ssl.conf
+++ b/src/apache2/shib_ssl.conf
@@ -5,35 +5,36 @@
         </Directory>
 
         <VirtualHost *:80>
-                ServerName      shibServerName
-                Redirect / https://shibServerName/
+                ServerName SP_SERVERNAME
+                Redirect / https:/SP_SERVERNAME/
         </VirtualHost>
 
 
         <VirtualHost *:443>
-                ServerName      shibServerName
+                ServerName      SP_SERVERNAME
                 ServerSignature Off
 
 
                 SSLEngine               on
 
-                SSLCertificateFile certPathcrtFile
-                SSLCertificateKeyFile keyPathkeyFile
-                #ShibURLScheme https
+		SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
+		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
 
+
+		ProxyPassMatch /Shibboleth.sso !
                 <Location /secure>
-                        AuthType shibboleth
+ 		        AuthType shibboleth
                         Require valid-user
                 </Location>
-
+		<Location /Shibboleth.sso>
+			setHandler shib
+		</Location>
 
                 # Possible values include: debug, info, notice, warn, error, crit,
                 # alert, emerg.
                 LogLevel info
                 ErrorLog /var/log/apache2/error.log
                 CustomLog /var/log/apache2/sp-access-443.log combined
-
-#               ProxyPass /Shibboleth.sso !
 
 
         </VirtualHost>
