Ajustes na imagem

--- a/src/apache2/shib_ssl.conf
+++ b/src/apache2/shib_ssl.conf
@@ -5,13 +5,13 @@
         </Directory>
 
         <VirtualHost *:80>
-                ServerName SP_SERVERNAME
-                Redirect / https:/SP_SERVERNAME/
+                ServerName sp-example.rnp.br
+                Redirect / https:/sp-example.rnp.br/
         </VirtualHost>
 
 
         <VirtualHost *:443>
-                ServerName      SP_SERVERNAME
+                ServerName      sp-example.rnp.br
                 ServerSignature Off
 
 
