Ajustes de arquivos e start.sh

--- a/src/apache2/shib_ssl.conf
+++ b/src/apache2/shib_ssl.conf
@@ -17,8 +17,8 @@
 
                 SSLEngine               on
 
-		SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
-		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+		SSLCertificateFile /etc/ssl/certs/self-signed.crt
+		SSLCertificateKeyFile /etc/ssl/certs/self-signed.key
 
 
 		ProxyPassMatch /Shibboleth.sso !
