Atualização do Shibboleth para v3.3.2

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+logs/*
 # End of https://www.gitignore.io/api/linux
 
