Ajusta ambiente e adiciona modulo php

--- a/src/apache2/shib_ssl.conf
+++ b/src/apache2/shib_ssl.conf
@@ -1,30 +1,32 @@
 <IfModule mod_ssl.c>
 
-        <Directory /var/www/>
+        <Directory /var/www/html>
         Require all granted
         </Directory>
 
         <VirtualHost *:80>
-                ServerName sp-example.rnp.br
-                Redirect / https:/sp-example.rnp.br/
+                ServerName sarom.brainyit.com.br
+                Redirect / https://sarom.brainyit.com.br/
         </VirtualHost>
 
 
         <VirtualHost *:443>
-                ServerName      sp-example.rnp.br
+                ServerName      sarom.brainyit.com.br
                 ServerSignature Off
-
 
                 SSLEngine               on
 
-		SSLCertificateFile /etc/ssl/certs/self-signed.crt
-		SSLCertificateKeyFile /etc/ssl/certs/self-signed.key
+		SSLCertificateFile /etc/ssl/certs/sp-cert.pem
+		SSLCertificateKeyFile /etc/ssl/certs/sp-key.pem
 
 
 		ProxyPassMatch /Shibboleth.sso !
-                <Location /secure>
- 		        AuthType shibboleth
-                        Require valid-user
+                <Location /sp>
+ 		        #AuthType shibboleth
+                        #Require valid-user
+                        AuthType shibboleth
+                        ShibRequestSetting requireSession 1
+                        require shib-session
                 </Location>
 		<Location /Shibboleth.sso>
 			setHandler shib
